# dlcut

./: .gitignore  CLAUDE.md  index.html  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  deps.rs  error.rs  ffmpeg.rs  fileserver.rs  lib.rs  main.rs  types.rs  ytdlp.rs
