[package]
name = "dlcut"
version = "1.1.0"
description = "A simple, elegant YouTube video downloader and cutter"
authors = ["DLCut"]
edition = "2021"

[lib]
name = "dlcut_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "rt-multi-thread", "fs"] }
thiserror = "1"
regex = "1"
percent-encoding = "2"
dirs = "5"
# Pin time crate to avoid Rust edition 2024 requirement
time = "=0.3.36"
# For downloading dependencies
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip = "2"
tauri-plugin-fs = "2.4.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
